--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
-raw_data
-notebooks
-
+*.egg-info
+.coverage
+.ipynb_checkpoints
+.DS_Store
+raw_data/
+*.csv
+**/__pycache__/
+.env
+notebooks/
+sample_recordings/
+tests/
+setup.sh
